Corrected mesh color. Changed import of %>%.

--- a/Vignette.Rmd
+++ b/Vignette.Rmd
@@ -12,10 +12,13 @@ knitr::opts_chunk$set(echo = TRUE)
 ## R Markdown
 
 ```{r data}
-ply_dir <- "/Users/mlouveaux/Documents/Postdoc/Projects/MGX-R bridge/2017-02-15_ply_files"
+# ply_dir <- "/Users/mlouveaux/Documents/Postdoc/Projects/MGX-R bridge/2017-02-15_ply_files"
 
-file <- paste0(ply_dir, "/test4.ply")
-cellGraphfile <- paste0(ply_dir, "/test4_cellGraph.ply")
+# file <- paste0(ply_dir, "/test4.ply")
+# cellGraphfile <- paste0(ply_dir, "/test4_cellGraph.ply")
+
+ply_dir2 <- "/Users/mlouveaux/Documents/Postdoc/Projects/MGX-R bridge/2016-11-25_ply_files"
+file <- paste0(ply_dir2, "/plyTest.ply")
 
 ```
 
