--- a/vignettes/my-vignette.Rmd
+++ b/vignettes/my-vignette.Rmd
@@ -56,3 +56,22 @@ Also a quote using `>`:
 
 > "He who gives up [code] safety for [code] speed deserves neither."
 ([via](https://twitter.com/hadleywickham/status/504368538874703872))
+
+
+
+```{r data}
+ply_dir <- "/Users/mlouveaux/Documents/Postdoc/Projects/MGX-R bridge/2017-02-15_ply_files"
+
+file <- paste0(ply_dir, "/test4.ply")
+cellGraphfile <- paste0(ply_dir, "/test4_cellGraph.ply")
+
+# ply_dir2 <- "/Users/mlouveaux/Documents/Postdoc/Projects/MGX-R bridge/2016-11-25_ply_files"
+# file <- paste0(ply_dir2, "/plyTest.ply")
+
+```
+
+
+
+
+
+
