--- a/vignettes/my-vignette.Rmd
+++ b/vignettes/my-vignette.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Vignette Title"
+title: "Vignette MorphoGraphX2R"
 author: "Marion Louveaux"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
@@ -9,64 +9,24 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-Vignettes are long form documentation commonly included in packages. Because they are part of the distribution of the package, they need to be as compact as possible. The `html_vignette` output type provides a custom style sheet (and tweaks some options) to ensure that the resulting html is as small as possible. The `html_vignette` format:
-
-- Never uses retina figures
-- Has a smaller default figure size
-- Uses a custom CSS stylesheet instead of the default Twitter Bootstrap style
-
 ## Vignette Info
 
-Note the various macros within the `vignette` section of the metadata block above. These are required in order to instruct R how to build the vignette. Note that you should change the `title` field and the `\VignetteIndexEntry` to match the title of your vignette.
-
-## Styles
-
-The `html_vignette` template includes a basic CSS theme. To override this theme you can specify your own CSS in the document metadata as follows:
-
-    output: 
-      rmarkdown::html_vignette:
-        css: mystyles.css
-
-## Figures
-
-The figure sizes have been customised so that you can easily put two images side-by-side. 
-
-```{r, fig.show='hold'}
-plot(1:10)
-plot(10:1)
+```{r allData}
+library(magrittr)
 ```
 
-You can enable figure captions by `fig_caption: yes` in YAML:
 
-    output:
-      rmarkdown::html_vignette:
-        fig_caption: yes
-
-Then you can use the chunk option `fig.cap = "Your figure caption."` in **knitr**.
-
-## More Examples
-
-You can write math expressions, e.g. $Y = X\beta + \epsilon$, footnotes^[A footnote here.], and tables, e.g. using `knitr::kable()`.
-
-```{r, echo=FALSE, results='asis'}
-knitr::kable(head(mtcars, 10))
+All .ply demonstration data are stored in /inst/extdata.
+```{r allData}
+dirData <- "/Users/mlouveaux/Documents/Postdoc/Projects/MGX-R bridge/MorphoGraphX2R/inst/extdata/"
 ```
 
-Also a quote using `>`:
+We select one .ply as example.
+```{r myData}
+dirPly <- "2017-02-15_ply_files"
 
-> "He who gives up [code] safety for [code] speed deserves neither."
-([via](https://twitter.com/hadleywickham/status/504368538874703872))
-
-
-
-```{r data}
-ply_dir <- "/Users/mlouveaux/Documents/Postdoc/Projects/MGX-R bridge/2017-02-15_ply_files"
-
-file <- paste0(ply_dir, "/test4.ply")
-cellGraphfile <- paste0(ply_dir, "/test4_cellGraph.ply")
-
-# ply_dir2 <- "/Users/mlouveaux/Documents/Postdoc/Projects/MGX-R bridge/2016-11-25_ply_files"
-# file <- paste0(ply_dir2, "/plyTest.ply")
+filePly <- paste0(dirData, dirPly, "/test4.ply")
+fileCellGraph <- paste0(dirData, dirPly, "/test4_cellGraph.ply")
 
 ```
 
