--- a/vignettes/my-vignette.Rmd
+++ b/vignettes/my-vignette.Rmd
@@ -97,6 +97,50 @@ How to display info on a 3D rgl graph:
 
 
 
+### Map of clonal origin
+
+I have N timepoints: 1, 2, 3, ..., N-1, N. I have the direct lineage between N-1 and N, N-2 and N-1, ..., 1 and 2. I would like to have intermediate lineages, e.g. ultimately lineage between 1 and N.
+
+Let's say each cell at timepoint 1 is the beginning of a "track". For each cell, I'll look in time an report each link I find: cell 12 --> cell 189 (1-->2), then cell 189 --> cell 308 and cell 189 --> cell 309 (2-->3), then cell 309 --> cell 401 and cell 309 --> cell 402  and cell 308 --> 456 (3-->4), which gives:      
+Track 1      
+source 12 frameSource 1 target 189 frameTarget 2       
+source 189 target 308       
+source 189 target 309       
+-- NB if "189" is not a unique ID, I need to make it unique adding the frame, for instance 2_189
+
+And spot dataframe is:
+ID_12 frame 1
+ID_189 frame 2
+
+
+```{r map, eval=FALSE}
+dirData2 <- paste0(dirData, "Louveaux_PhD/2013-02-12_LTi6B_dis_A/")
+
+lineages <- c("2013-02-12_LTi6B_dis_A_T0-T12h_lineage.csv", 
+  "2013-02-12_LTi6B_dis_A_T12h-T24h_lineage.csv",
+  "2013-02-12_LTi6B_dis_A_T24h-T36h_lineage.csv",
+  "2013-02-12_LTi6B_dis_A_T36h-T48h_lineage.csv")
+
+allLineages <- purrr::map(1:length(lineages), function(i){
+  lin_tmp <- tibble::as.tibble(read.csv2(paste0(dirData2, lineages[i]), header = TRUE, sep = ","))
+  lin <- dplyr::bind_cols(lin_tmp, 
+                          data.frame(frameSource = rep(as.integer(i), nrow(lin_tmp)),
+                                     frameTarget = rep(as.integer(i+1), nrow(lin_tmp)))) %>%
+    dplyr::mutate(ID_Source = paste0(Parent.Label, "_", frameSource),
+                  ID_Target = paste0(Label, "_", frameTarget)) %>%
+    dplyr::select(ID_Source, ID_Target)
+    names(lin) <- purrr::map2_chr(names(lin), c(i, i+1), ~ paste0(.x, .y))
+    lin
+}
+)
+
+tmp_store <- allLineages[[1]]
+for (j in 2:length(lineages)){
+  tmp_store <- dplyr::full_join(tmp_store, allLineages[[j]], # full join or left join?
+                 by=setNames(paste0("ID_Source", j), paste0("ID_Target", j)))
+}
+
+```
 
 
 
