--- a/vignettes/my-vignette.Rmd
+++ b/vignettes/my-vignette.Rmd
@@ -14,10 +14,13 @@ editor_options:
 ## Extra librairies
 
 ```{r lib}
+library(colorRamps)
 library(MorphoGraphX2R)
 library(magrittr)
 library(dplyr)
 library(plotly)
+library(glue)
+library(RColorBrewer)
 ```
 
 ## Loading data
@@ -69,21 +72,29 @@ myCellGraph <- modified_read.cellGraph(fileCellGraph = fileCellGraph, header_max
 
 
 
-## Displaying the mesh with plotly
+## Displaying the mesh with plotly - function
 ```{r}
 plotlyMesh <- function(meshExample,
                        meshColors = NULL,
                        meshCellcenter = NULL){
+  makeColorScale <- FALSE
   if (!is.null(nrow(meshColors)) && ncol(meshColors)>1){
     color <- NULL
     for (i in 1:ncol(meshColors)){
       color[i] <-  setdiff(unique(meshColors[,i]), "#000000") # here I remove black vertices
     } # to be more general, remove any color shared by two vertices
+    opacity <- 1
   }else{
     if (is.null(meshColors)){
-      color <- rep("#00FFFF", ncol(myMesh$it))
+      color <- rep("#CCCCFF", ncol(myMesh$it)) # "#00FFFF"
+      opacity <- 0.2
     }else{
-      color <- meshColors
+      makeColorScale <- TRUE
+      colorCut <- cut(pull(meshColors), 15,
+                      labels =  colorRamps::matlab.like(15)
+      )
+      color <- as.character(colorCut)
+      opacity <- 1
     }
   }
   
@@ -94,53 +105,58 @@ plotlyMesh <- function(meshExample,
                  i = meshExample$it[1,]-1, # NB indices start at 0
                  j = meshExample$it[2,]-1,
                  k = meshExample$it[3,]-1,
-                 facecolor = color #one color per triangle (not per biological cell)
+                 facecolor = color, #one color per triangle (not per biological cell)
+                 opacity = opacity
   )
   #facecolor: one color per triangle (e.g. length(facecolor) == length(i))
   
-  trace4 <- list(
-    x = c(100,1,200),
-    y = c(200,1,1),
-    z = c(1,500,3),
-    marker = list(
-      autocolorscale = FALSE,
-      cmax = 2.5,
-      cmin = 0,
-      colorbar = list(
-        x = 1.2,
-        y = 0.5,
-        len = 0.3,
-        thickness = 15,
-        tickfont = list(size = 12),
-        titlefont = list(size = 20)
+  if (makeColorScale){
+    trace4 <- list(
+      x = c(100,1,200),
+      y = c(200,1,1),
+      z = c(1,500,3),
+      marker = list(
+        autocolorscale = FALSE,
+        cmax = max(meshColors),#2.5,
+        cmin = min(meshColors),#0,
+        colorbar = list(
+          x = 1.2,
+          y = 0.5,
+          len = 0.3,
+          thickness = 15,
+          tickfont = list(size = 12),
+          titlefont = list(size = 20)
+        ),
+        # colorscale = list(
+        #   c(0, "#800026"),
+        #   list(0.2, "#bd0026"),
+        #   list(0.24, "#e31a1c"),
+        #   list(0.28, "#fc4e2a"),
+        #   list(0.32, "#fd8d3c"),
+        #   list(0.36, "#feb24c"),
+        #   list(0.4, "#ffffe5"),
+        #   list(0.44, "#d9f0a3"),
+        #   list(0.48, "#addd8e"),
+        #   list(0.52, "#78c679"),
+        #   list(0.56, "#41ab5d"),
+        #   list(0.6, "#238443"),
+        #   list(0.64, "#41b6c4"),
+        #   list(0.8, "#225ea8"),
+        #   list(1, "#081d58")
+        # ),
+        colorscale = matlab.like(15), # from colorRamps
+        # reversescale = TRUE,
+        line = list(width = 0),
+        opacity = 0.9,
+        showscale = TRUE,
+        size = 20,
+        symbol = "circle"
       ),
-      colorscale = list(
-        c(0, "#800026"),
-        list(0.2, "#bd0026"),
-        list(0.24, "#e31a1c"),
-        list(0.28, "#fc4e2a"),
-        list(0.32, "#fd8d3c"),
-        list(0.36, "#feb24c"),
-        list(0.4, "#ffffe5"),
-        list(0.44, "#d9f0a3"),
-        list(0.48, "#addd8e"),
-        list(0.52, "#78c679"),
-        list(0.56, "#41ab5d"),
-        list(0.6, "#238443"),
-        list(0.64, "#41b6c4"),
-        list(0.8, "#225ea8"),
-        list(1, "#081d58")
-      ),
-      line = list(width = 0),
-      opacity = 0.9,
-      showscale = TRUE,
-      size = 20,
-      symbol = "circle"
-    ),
-    mode = "markers",
-    opacity = 0,
-    type = "scatter3d"
-  )
+      mode = "markers",
+      opacity = 0,
+      type = "scatter3d"
+    )
+  }
   
   layout <- list(
     scene = list(
@@ -169,23 +185,26 @@ plotlyMesh <- function(meshExample,
   )
   
   p <- plot_ly()
-  p <- add_trace(p, x=trace2$x, y=trace2$y, z=trace2$z,
+  p <- add_trace(p, x = trace2$x, y=trace2$y, z=trace2$z,
                  facecolor=trace2$facecolor,
-                 i=trace2$i, j=trace2$j, k=trace2$k, type=trace2$type)
-  
-  p <- add_trace(p, x=trace2$x, y=trace2$y, z=trace2$z,
-    marker = trace4$marker,
-    mode = trace4$mode,
-    opacity = trace4$opacity,
-    type = trace4$type)
-  
-  if (!is.null(meshCellcenter)){
-    p <- add_markers(p, x = meshCellcenter$x,
+                 i=trace2$i, j=trace2$j, k=trace2$k, type=trace2$type,
+                 opacity=trace2$opacity)
+  if (makeColorScale){
+    p <- add_trace(p, x=trace2$x, y=trace2$y, z=trace2$z,
+                   marker = trace4$marker,
+                   mode = trace4$mode,
+                   opacity = trace4$opacity,
+                   type = trace4$type)
+  }
+  if (!is.null(meshCellcenter)){ # show cell center
+    p <- add_trace(p, x = meshCellcenter$x,
                      y = meshCellcenter$y,
                      z = meshCellcenter$z,
-                     marker=list(symbol = 'circle', sizemode="diameter", sizeref = 0.01),
-                     sizes = c(0.0005, 0.0005) ## PB with size!!!
-    ) 
+                     type = "scatter3d",
+                     mode = "markers",
+                   marker=list(color = 'rgb(255, 255, 255)',
+                   size = 1.5)
+)
   }
   p <- layout(p, scene=layout$scene, title=layout$title, xaxis=layout$xaxis, yaxis=layout$yaxis)
   
@@ -195,8 +214,15 @@ plotlyMesh <- function(meshExample,
 
 To display the mesh with cell labels:
 ```{r map3D, eval=FALSE}
-plotlyMesh(meshExample = myMesh,
+p1 <- plotlyMesh(meshExample = myMesh,
            meshColors = myMesh$allColors$Col_label)
+p1
+```
+
+
+```{r map3D2, eval=FALSE}
+plotlyMesh(meshExample = myMesh,
+           meshColors = NULL)
 ```
 
 
@@ -205,19 +231,123 @@ plotlyMesh(meshExample = myMesh,
 
 ### Scalar info (area, growth rate...)
 ```{r heatmap3D, eval=FALSE}
-plotlyMesh(meshExample = myMesh, 
-           meshColors = left_join(myMesh$it_label, myCellGraph$vertices) %>% select(., GeometryArea) %>% t(.),
-           meshCellcenter = NULL)
+p2 <- plotlyMesh(meshExample = myMesh, 
+           meshColors = left_join(myMesh$it_label, myCellGraph$vertices) %>%
+             select(., GeometryArea),
+           meshCellcenter = NULL
+)
+p2
 ```
 
 
 ### Vector/tensor info (principal dir of curv...)
 
-```{r heatmap3D, eval=FALSE}
-plotlyMesh(meshExample = myMesh, 
-           meshColors = NULL,
-           meshCellcenter = myCellGraph$vertices[,c("x", "y", "z")])
+```{r heatmap3D2, eval=FALSE}
+meshCellcenter <- myCellGraph$vertices[,c("x", "y", "z")]
+p3 <- plotlyMesh(meshExample = myMesh, 
+                meshColors = NULL,
+                meshCellcenter = meshCellcenter)
+
+# Find coords
+find_coords <- function(cellcenter, tipUnit, d, scale = 1) {
+  d <- d*scale
+  # Distance
+  tip1 <- d / (sqrt(sum(tipUnit^2))) * tipUnit + cellcenter
+  tip2 <- (-d / (sqrt(sum(tipUnit^2))) * tipUnit) + cellcenter
+  tibble(x1 = tip1[1], y1 = tip1[2], z1 = tip1[3],
+         x2 = tip2[1], y2 = tip2[2], z2 = tip2[3])
+}
+
+# Test avec !!
+tensor_name <- "CellAxisPDG"
+grand.name <- glue("{tensor_name}.{c(1:3, 7)}")
+petit.name <- glue("{tensor_name}.{c(4:6, 8)}")
+
+tmp <- myCellGraph$vertices %>%
+  rename(
+    tipUnit.1 = !!grand.name[1],
+    tipUnit.2 = !!grand.name[2],
+    tipUnit.3 = !!grand.name[3],
+    d = !!grand.name[4],
+  ) %>%
+  mutate(grand = purrr::pmap(list(x, y, z, tipUnit.1, tipUnit.2, tipUnit.3, d),
+                             ~find_coords(cellcenter = c(..1, ..2, ..3),
+                                          tipUnit = c(..4, ..5, ..6),
+                                          d = ..7,
+                                          scale = 150))) %>%
+  tidyr::unnest(grand, .sep = ".") %>%
+  select(-starts_with("tipUnit"), -d) %>%
+  rename(
+    tipUnit.1 = !!petit.name[1],
+    tipUnit.2 = !!petit.name[2],
+    tipUnit.3 = !!petit.name[3],
+    d = !!petit.name[4],
+  ) %>%
+  mutate(petit = purrr::pmap(list(x, y, z, tipUnit.1, tipUnit.2, tipUnit.3, d),
+                             ~find_coords(cellcenter = c(..1, ..2, ..3),
+                                          tipUnit = c(..4, ..5, ..6),
+                                          d = ..7,
+                                          scale = 150))) %>%
+  tidyr::unnest(petit, .sep = ".") %>%
+  select(-starts_with("tipUnit"), -d) %>%
+  inner_join(myCellGraph$vertices)
+
+for (i in 1:nrow(tmp)){
+  xcoord <- as.vector(t(select(tmp, x, grand.x1, grand.x2)[i,]))
+  ycoord <- as.vector(t(select(tmp, y, grand.y1, grand.y2)[i,]))
+  zcoord <- as.vector(t(select(tmp, z, grand.z1, grand.z2)[i,]))
+  p3 <- add_trace(p3, x = xcoord, y = ycoord, z = zcoord,
+                 line = list(color = 'rgb(0, 0, 0)', width = 6), mode = "lines",
+                 type = "scatter3d") %>%
+    layout(showlegend = FALSE)
+  
+  xcoord <- as.vector(t(select(tmp, x, petit.x1, petit.x2)[i,]))
+  ycoord <- as.vector(t(select(tmp, y, petit.y1, petit.y2)[i,]))
+  zcoord <- as.vector(t(select(tmp, z, petit.z1, petit.z2)[i,]))
+  p3 <- add_trace(p3, x = xcoord, y = ycoord, z = zcoord,
+                 line = list(color = 'rgb(0, 0, 0)', width = 6), mode = "lines",
+                 type = "scatter3d") %>%
+    layout(showlegend = FALSE)
+
+}
+p3
 ```
+
+
+## Drawing cell contours
+
+```{r}
+vertexCellcenter <- purrr::map(1:ncol(myMesh$allColors$Col_label), ~ 
+  myMesh$it[ which(myMesh$allColors$Col_label[,.x] == names(which(table(myMesh$allColors$Col_label[,.x]) == 1))), .x ]
+)
+
+edgesCoords <- purrr::map(1:ncol(myMesh$allColors$Col_label), ~ 
+  myMesh$vb[,myMesh$it[ which(myMesh$allColors$Col_label[,.x] != names(which(table(myMesh$allColors$Col_label[,.x])==1))), .x]]
+)
+
+p <- plotlyMesh(meshExample = myMesh,
+           meshColors = NULL)
+
+for (i in 1:length(unique(edgesCoords))){
+  edge_tmp <- unique(edgesCoords)[[i]]
+  xcoord <- edge_tmp[1,]
+  ycoord <- edge_tmp[2,]
+  zcoord <- edge_tmp[3,]
+  p <- add_trace(p, x = xcoord, y = ycoord, z = zcoord,
+                 line = list(color = 'rgb(0, 0, 0)', width = 6), mode = "lines",
+                 type = "scatter3d") %>%
+    layout(showlegend = FALSE)
+}
+p
+
+```
+
+
+## Adding time information
+
+```{r}
+```
+
 
 - list of attributes needed: 
     *area--
