Moving the function plotlyMesh from the vignette to separate .R file.

--- a/vignettes/my-vignette.Rmd
+++ b/vignettes/my-vignette.Rmd
@@ -52,11 +52,16 @@ Note from 2017-12-26: read_ply_function is clean. I need now to test it on numer
 
 ```{r readPly}
 # N.B. to check mesh: put rgl viz out of modified_read.ply
-myMesh <- modified_read.ply(file = filePly, ShowSpecimen = TRUE, addNormals = TRUE,
+myMesh <- modified_read.ply(file = filePly, ShowSpecimen = FALSE, addNormals = TRUE,
                                MatCol= 1, header_max = 30,
                                my_colors = c("#800000", "#FF0000", "#808000", "#FFFF00",
                                              "#008000", "#00FF00", "#008080", "#00FFFF",
                                              "#000080", "#0000FF", "#800080", "#FF00FF"))
+```
+
+To display the mesh with RGL
+```{r}
+# rgl::shade3d(myMesh)
 ```
 
 To change mesh color and display the new color:
@@ -72,155 +77,19 @@ myCellGraph <- modified_read.cellGraph(fileCellGraph = fileCellGraph, header_max
 
 
 
-## Displaying the mesh with plotly - function
-```{r}
-plotlyMesh <- function(meshExample,
-                       meshColors = NULL,
-                       meshCellcenter = NULL){
-  makeColorScale <- FALSE
-  if (!is.null(nrow(meshColors)) && ncol(meshColors)>1){
-    color <- NULL
-    for (i in 1:ncol(meshColors)){
-      color[i] <-  setdiff(unique(meshColors[,i]), "#000000") # here I remove black vertices
-    } # to be more general, remove any color shared by two vertices
-    opacity <- 1
-  }else{
-    if (is.null(meshColors)){
-      color <- rep("#CCCCFF", ncol(myMesh$it)) # "#00FFFF"
-      opacity <- 0.2
-    }else{
-      makeColorScale <- TRUE
-      colorCut <- cut(pull(meshColors), 15,
-                      labels =  colorRamps::matlab.like(15)
-      )
-      color <- as.character(colorCut)
-      opacity <- 1
-    }
-  }
-  
-  trace2 <- list(type="mesh3d",
-                 x = meshExample$vb[1,],
-                 y = meshExample$vb[2,],
-                 z = meshExample$vb[3,],
-                 i = meshExample$it[1,]-1, # NB indices start at 0
-                 j = meshExample$it[2,]-1,
-                 k = meshExample$it[3,]-1,
-                 facecolor = color, #one color per triangle (not per biological cell)
-                 opacity = opacity
-  )
-  #facecolor: one color per triangle (e.g. length(facecolor) == length(i))
-  
-  if (makeColorScale){
-    trace4 <- list(
-      x = c(100,1,200),
-      y = c(200,1,1),
-      z = c(1,500,3),
-      marker = list(
-        autocolorscale = FALSE,
-        cmax = max(meshColors),#2.5,
-        cmin = min(meshColors),#0,
-        colorbar = list(
-          x = 1.2,
-          y = 0.5,
-          len = 0.3,
-          thickness = 15,
-          tickfont = list(size = 12),
-          titlefont = list(size = 20)
-        ),
-        # colorscale = list(
-        #   c(0, "#800026"),
-        #   list(0.2, "#bd0026"),
-        #   list(0.24, "#e31a1c"),
-        #   list(0.28, "#fc4e2a"),
-        #   list(0.32, "#fd8d3c"),
-        #   list(0.36, "#feb24c"),
-        #   list(0.4, "#ffffe5"),
-        #   list(0.44, "#d9f0a3"),
-        #   list(0.48, "#addd8e"),
-        #   list(0.52, "#78c679"),
-        #   list(0.56, "#41ab5d"),
-        #   list(0.6, "#238443"),
-        #   list(0.64, "#41b6c4"),
-        #   list(0.8, "#225ea8"),
-        #   list(1, "#081d58")
-        # ),
-        colorscale = matlab.like(15), # from colorRamps
-        # reversescale = TRUE,
-        line = list(width = 0),
-        opacity = 0.9,
-        showscale = TRUE,
-        size = 20,
-        symbol = "circle"
-      ),
-      mode = "markers",
-      opacity = 0,
-      type = "scatter3d"
-    )
-  }
-  
-  layout <- list(
-    scene = list(
-      xaxis = list(
-        backgroundcolor = "rgb(230,230,230)", 
-        gridcolor = "rgb(255,255,255)", 
-        showbackground = TRUE, 
-        zerolinecolor = "rgb(255,255,255)"
-      ), 
-      yaxis = list(
-        backgroundcolor = "rgb(230,230,230)", 
-        gridcolor = "rgb(255,255,255)", 
-        showbackground = TRUE, 
-        zerolinecolor = "rgb(255,255,255)"
-      ), 
-      zaxis = list(
-        backgroundcolor = "rgb(230,230,230)", 
-        gridcolor = "rgb(255,255,255)", 
-        showbackground = TRUE, 
-        zerolinecolor = "rgb(255,255,255)"
-      )
-    ), 
-    title = "My mesh", 
-    xaxis = list(title = "m[, 1]"), 
-    yaxis = list(title = "m[, 2]")
-  )
-  
-  p <- plot_ly()
-  p <- add_trace(p, x = trace2$x, y=trace2$y, z=trace2$z,
-                 facecolor=trace2$facecolor,
-                 i=trace2$i, j=trace2$j, k=trace2$k, type=trace2$type,
-                 opacity=trace2$opacity)
-  if (makeColorScale){
-    p <- add_trace(p, x=trace2$x, y=trace2$y, z=trace2$z,
-                   marker = trace4$marker,
-                   mode = trace4$mode,
-                   opacity = trace4$opacity,
-                   type = trace4$type)
-  }
-  if (!is.null(meshCellcenter)){ # show cell center
-    p <- add_trace(p, x = meshCellcenter$x,
-                     y = meshCellcenter$y,
-                     z = meshCellcenter$z,
-                     type = "scatter3d",
-                     mode = "markers",
-                   marker=list(color = 'rgb(255, 255, 255)',
-                   size = 1.5)
-)
-  }
-  p <- layout(p, scene=layout$scene, title=layout$title, xaxis=layout$xaxis, yaxis=layout$yaxis)
-  
-  p
-}
-```
+## Displaying the mesh with plotly
 
 To display the mesh with cell labels:
 ```{r map3D, eval=FALSE}
+# add control on the title of the plot
 p1 <- plotlyMesh(meshExample = myMesh,
            meshColors = myMesh$allColors$Col_label)
 p1
 ```
 
-
+Without the cell labels:
 ```{r map3D2, eval=FALSE}
+# add control on the level of opacity
 plotlyMesh(meshExample = myMesh,
            meshColors = NULL)
 ```
