--- a/vignettes/vignette_basics.Rmd
+++ b/vignettes/vignette_basics.Rmd
@@ -126,7 +126,7 @@ p2
 This part of the code is quite fresh. It seems to work, but I haven't tested it extensively yet.
 
 ```{r heatmap3D2, warning = FALSE, message = FALSE}
-p3 <- plotlyMesh(meshExample = myMesh, 
+meshPlotly <- plotlyMesh(meshExample = myMesh, 
                 meshColors = NULL,
                 meshCellcenter = meshCellcenter)
 
@@ -140,59 +140,68 @@ find_coords <- function(cellcenter, tipUnit, d, scale = 1) {
          x2 = tip2[1], y2 = tip2[2], z2 = tip2[3])
 }
 
-# Test avec !!
-tensor_name <- "CellAxisPDG"
-grand.name <- glue("{tensor_name}.{c(1:3, 7)}")
-petit.name <- glue("{tensor_name}.{c(4:6, 8)}")
+# Test with !!
 
-tmp <- myCellGraph$vertices %>%
+show_tensors <- function(p,
+                         cellGraph,
+                         tensor_name) {
+  
+long.name <- glue("{tensor_name}.{c(1:3, 7)}")
+short.name <- glue("{tensor_name}.{c(4:6, 8)}")
+
+tmp <- cellGraph$vertices %>%
   rename(
-    tipUnit.1 = !!grand.name[1],
-    tipUnit.2 = !!grand.name[2],
-    tipUnit.3 = !!grand.name[3],
-    d = !!grand.name[4],
+    tipUnit.1 = !!long.name[1],
+    tipUnit.2 = !!long.name[2],
+    tipUnit.3 = !!long.name[3],
+    d = !!long.name[4],
   ) %>%
-  mutate(grand = purrr::pmap(list(x, y, z, tipUnit.1, tipUnit.2, tipUnit.3, d),
+  mutate(long = purrr::pmap(list(x, y, z, tipUnit.1, tipUnit.2, tipUnit.3, d),
                              ~find_coords(cellcenter = c(..1, ..2, ..3),
                                           tipUnit = c(..4, ..5, ..6),
                                           d = ..7,
                                           scale = 150))) %>%
-  tidyr::unnest(grand, .sep = ".") %>%
+  tidyr::unnest(long, .sep = ".") %>%
   select(-starts_with("tipUnit"), -d) %>%
   rename(
-    tipUnit.1 = !!petit.name[1],
-    tipUnit.2 = !!petit.name[2],
-    tipUnit.3 = !!petit.name[3],
-    d = !!petit.name[4],
+    tipUnit.1 = !!short.name[1],
+    tipUnit.2 = !!short.name[2],
+    tipUnit.3 = !!short.name[3],
+    d = !!short.name[4],
   ) %>%
-  mutate(petit = purrr::pmap(list(x, y, z, tipUnit.1, tipUnit.2, tipUnit.3, d),
+  mutate(short = purrr::pmap(list(x, y, z, tipUnit.1, tipUnit.2, tipUnit.3, d),
                              ~find_coords(cellcenter = c(..1, ..2, ..3),
                                           tipUnit = c(..4, ..5, ..6),
                                           d = ..7,
                                           scale = 150))) %>%
-  tidyr::unnest(petit, .sep = ".") %>%
+  tidyr::unnest(short, .sep = ".") %>%
   select(-starts_with("tipUnit"), -d) %>%
-  inner_join(myCellGraph$vertices)
+  inner_join(cellGraph$vertices)
 
 for (i in 1:nrow(tmp)){
-  xcoord <- as.vector(t(select(tmp, x, grand.x1, grand.x2)[i,]))
-  ycoord <- as.vector(t(select(tmp, y, grand.y1, grand.y2)[i,]))
-  zcoord <- as.vector(t(select(tmp, z, grand.z1, grand.z2)[i,]))
-  p3 <- add_trace(p3, x = xcoord, y = ycoord, z = zcoord,
+  xcoord <- as.vector(t(select(tmp, x, long.x1, long.x2)[i,]))
+  ycoord <- as.vector(t(select(tmp, y, long.y1, long.y2)[i,]))
+  zcoord <- as.vector(t(select(tmp, z, long.z1, long.z2)[i,]))
+  p <- add_trace(p, x = xcoord, y = ycoord, z = zcoord,
                  line = list(color = 'rgb(0, 0, 0)', width = 6), mode = "lines",
                  type = "scatter3d", hoverinfo = 'none') %>%
     layout(showlegend = FALSE)
   
-  xcoord <- as.vector(t(select(tmp, x, petit.x1, petit.x2)[i,]))
-  ycoord <- as.vector(t(select(tmp, y, petit.y1, petit.y2)[i,]))
-  zcoord <- as.vector(t(select(tmp, z, petit.z1, petit.z2)[i,]))
-  p3 <- add_trace(p3, x = xcoord, y = ycoord, z = zcoord,
+  xcoord <- as.vector(t(select(tmp, x, short.x1, short.x2)[i,]))
+  ycoord <- as.vector(t(select(tmp, y, short.y1, short.y2)[i,]))
+  zcoord <- as.vector(t(select(tmp, z, short.z1, short.z2)[i,]))
+  p <- add_trace(p, x = xcoord, y = ycoord, z = zcoord,
                  line = list(color = 'rgb(0, 0, 0)', width = 6), mode = "lines",
                  type = "scatter3d", hoverinfo = 'none') %>%
     layout(showlegend = FALSE)
 
 }
-p3
+p
+}
+
+show_tensors(p = meshPlotly,
+             cellGraph = myCellGraph,
+             tensor_name = "CellAxisPDG")
 ```
 
 
