Moving 3 functions (for tensor and cell contour visualisation) out of the vignette.

--- a/vignettes/vignette_basics.Rmd
+++ b/vignettes/vignette_basics.Rmd
@@ -135,78 +135,10 @@ meshPlotly <- plotlyMesh(meshExample = myMesh,
                 meshColors = NULL,
                 meshCellcenter = meshCellcenter)
 
-# Find coords
-find_coords <- function(cellcenter, tipUnit, d, scale = 1) {
-  d <- d*scale
-  # Distance
-  tip1 <- d / (sqrt(sum(tipUnit^2))) * tipUnit + cellcenter
-  tip2 <- (-d / (sqrt(sum(tipUnit^2))) * tipUnit) + cellcenter
-  tibble(x1 = tip1[1], y1 = tip1[2], z1 = tip1[3],
-         x2 = tip2[1], y2 = tip2[2], z2 = tip2[3])
-}
-
-# Test with !!
-
-show_tensors <- function(p,
-                         cellGraph,
-                         tensor_name) {
-  
-long.name <- glue("{tensor_name}.{c(1:3, 7)}")
-short.name <- glue("{tensor_name}.{c(4:6, 8)}")
-
-tmp <- cellGraph$vertices %>%
-  rename(
-    tipUnit.1 = !!long.name[1],
-    tipUnit.2 = !!long.name[2],
-    tipUnit.3 = !!long.name[3],
-    d = !!long.name[4],
-  ) %>%
-  mutate(long = purrr::pmap(list(x, y, z, tipUnit.1, tipUnit.2, tipUnit.3, d),
-                             ~find_coords(cellcenter = c(..1, ..2, ..3),
-                                          tipUnit = c(..4, ..5, ..6),
-                                          d = ..7,
-                                          scale = 150))) %>%
-  tidyr::unnest(long, .sep = ".") %>%
-  select(-starts_with("tipUnit"), -d) %>%
-  rename(
-    tipUnit.1 = !!short.name[1],
-    tipUnit.2 = !!short.name[2],
-    tipUnit.3 = !!short.name[3],
-    d = !!short.name[4],
-  ) %>%
-  mutate(short = purrr::pmap(list(x, y, z, tipUnit.1, tipUnit.2, tipUnit.3, d),
-                             ~find_coords(cellcenter = c(..1, ..2, ..3),
-                                          tipUnit = c(..4, ..5, ..6),
-                                          d = ..7,
-                                          scale = 150))) %>%
-  tidyr::unnest(short, .sep = ".") %>%
-  select(-starts_with("tipUnit"), -d) %>%
-  inner_join(cellGraph$vertices)
-
-for (i in 1:nrow(tmp)){
-  xcoord <- as.vector(t(select(tmp, x, long.x1, long.x2)[i,]))
-  ycoord <- as.vector(t(select(tmp, y, long.y1, long.y2)[i,]))
-  zcoord <- as.vector(t(select(tmp, z, long.z1, long.z2)[i,]))
-  p <- add_trace(p, x = xcoord, y = ycoord, z = zcoord,
-                 line = list(color = 'rgb(0, 0, 0)', width = 6), mode = "lines",
-                 type = "scatter3d", hoverinfo = 'none') %>%
-    layout(showlegend = FALSE)
-  
-  xcoord <- as.vector(t(select(tmp, x, short.x1, short.x2)[i,]))
-  ycoord <- as.vector(t(select(tmp, y, short.y1, short.y2)[i,]))
-  zcoord <- as.vector(t(select(tmp, z, short.z1, short.z2)[i,]))
-  p <- add_trace(p, x = xcoord, y = ycoord, z = zcoord,
-                 line = list(color = 'rgb(0, 0, 0)', width = 6), mode = "lines",
-                 type = "scatter3d", hoverinfo = 'none') %>%
-    layout(showlegend = FALSE)
-
-}
-p
-}
-
 show_tensors(p = meshPlotly,
              cellGraph = myCellGraph,
-             tensor_name = "CellAxisPDG")
+             tensor_name = "CellAxisPDG",
+             scale = 150)
 ```
 
 
@@ -217,25 +149,6 @@ As some may be also interested by drawing the cell contours, I have added an exa
 ```{r cellContours}
 meshPlotly <- plotlyMesh(meshExample = myMesh,
            meshColors = NULL)
-
-show_cellcontour <- function(p, mesh) {
-  
-edgesCoords <- purrr::map(1:ncol(myMesh$allColors$Col_label), ~ 
-  myMesh$vb[,myMesh$it[ which(myMesh$allColors$Col_label[,.x] != names(which(table(myMesh$allColors$Col_label[,.x])==1))), .x]]
-)
-
-for (i in 1:length(unique(edgesCoords))){
-  edge_tmp <- unique(edgesCoords)[[i]]
-  xcoord <- edge_tmp[1,]
-  ycoord <- edge_tmp[2,]
-  zcoord <- edge_tmp[3,]
-  p <- add_trace(p, x = xcoord, y = ycoord, z = zcoord,
-                 line = list(color = 'rgb(255, 255, 255)', width = 6), mode = "lines",
-                 type = "scatter3d", hoverinfo = 'none') %>%
-    layout(showlegend = FALSE)
-}
-p
-}
 
 show_cellcontour(p = meshPlotly, mesh = myMesh)
 
