--- a/vignettes/vignette_time_series.Rmd
+++ b/vignettes/vignette_time_series.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Vignette MorphoGraphX2R - time serie"
+title: "Vignette mgx2r - time serie"
 author: "Marion Louveaux"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette MorphoGraphX2R - time serie}
+  %\VignetteIndexEntry{Vignette mgx2r - time serie}
   %\VignetteEncoding{UTF-8}
   %\VignetteEngine{knitr::rmarkdown}
 editor_options: 
@@ -37,13 +37,13 @@ library(mgx2r)
 Some .ply demonstration data coming from my PhD thesis are attached to this package and used here in the vignette. This dataset is a timelapse recording of the development of a WT shoot apical meristem expressing a membrane marker. I took one 3D stack every 12h and have 5 timepoints in total. Here I load the .ply and cell graph .ply for all the timepoints of this timelapse recording.
 
 ```{r, warning = FALSE, message = FALSE}
-ply.dir <- system.file("extdata", "normalMesh/", package = "MorphoGraphX2R")
+ply.dir <- system.file("extdata", "normalMesh/", package = "mgx2r")
 
 mesh.all <- map(list.files(ply.dir, recursive = TRUE, full.names = TRUE),
                 ~ modified_read.ply(file = .x, ShowSpecimen = FALSE))
 
 
-graph.dir <- system.file("extdata", "cellGraph/", package = "MorphoGraphX2R")
+graph.dir <- system.file("extdata", "cellGraph/", package = "mgx2r")
 
 cellGraph.all <- map(list.files(graph.dir, recursive = TRUE, full.names = TRUE), ~modified_read.cellGraph(fileCellGraph = .x, header_max = 30))
 ```
