--- a/vignettes/vignette_basics.Rmd
+++ b/vignettes/vignette_basics.Rmd
@@ -51,7 +51,7 @@ fileCellGraph <- system.file("extdata",  "cellGraph/2013-02-12_LTi6B_dis_A_T0_ce
 
 I load the .ply mesh with the modified_read.ply() function. This function is a modified version of read.ply function from geomorph R package to specifically read MGX ply files. I takes in account the fact that each triangular face of the mesh can get several colors (one for the label, one for the fluorescent signal projected on the mesh -membrane or microtubules-...).
 ```{r readPly, warning = FALSE, message = FALSE}
-myMesh <- modified_read.ply(file = filePly, ShowSpecimen = FALSE, addNormals = TRUE,
+myMesh <- read_mgxPly(file = filePly, ShowSpecimen = FALSE, addNormals = TRUE,
                                MatCol= 1, header_max = 30,
                                my_colors = c("#800000", "#FF0000", "#808000", "#FFFF00",
                                              "#008000", "#00FF00", "#008080", "#00FFFF",
@@ -71,7 +71,7 @@ rgl::shade3d(myMesh)
 
 Information relative to cells and cell walls (resp. vertices and edges of the cell graph) are stored in a second .ply that I read with the modified_read.cellGraph() function that I wrote myself. The modified_read.cellGraph() function reads the cell graph .ply and extract two dataframes (one for the vertices informations and one for the edges informations). These two dataframes are then combined into a list.
 ```{r readCellGraph}
-myCellGraph <- modified_read.cellGraph(fileCellGraph = fileCellGraph, header_max = 30)
+myCellGraph <- read_mgxCellGraph(fileCellGraph = fileCellGraph, header_max = 30)
 ```
 
 N.B.: to see the content of one of these function, just type its name without the parentheses.
