--- a/README.Rmd
+++ b/README.Rmd
@@ -26,25 +26,46 @@ devtools::install_github("marionlouveaux/mgx2r")
 ```
 
 ## Example
+### Read dataset
+Some .ply demonstration data coming from my PhD thesis are attached to this package. This dataset is a timelapse recording of the development of a shoot apical meristem of the plant \emph{Arabidopsis thaliana} expressing a membrane marker. I took one 3D stack every 12h and have 5 timepoints in total. For more information regarding the generation of this dataset, see `help("mgx2r")`.
 
-This is a basic example which shows you how to solve a common problem:
+```{r myData, eval=TRUE}
+### Full datataset
+filePly <- system.file("extdata", "full/normalMesh/2013-02-12_LTi6B_dis_A_T0_cells_minW1_normalMesh.ply", package = "mgx2r")
 
-```{r example}
-## basic example code
+fileCellGraph <- system.file("extdata",  "full/cellGraph/2013-02-12_LTi6B_dis_A_T0_cells_minW1_cellGraph.ply", package = "mgx2r")
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
+The mesh data are read and converted as mesh 3D using the read_mgxPly function. They contain informatons relative to the geometry of the plant tissue. 
+```{r readPly, warning = FALSE, message = FALSE, eval=TRUE}
+library(mgx2r)
+myMesh <- read_mgxPly(file = filePly, ShowSpecimen = FALSE, addNormals = TRUE,
+                               MatCol= 1, header_max = 30,
+                               my_colors = c("#800000", "#FF0000", "#808000", "#FFFF00",
+                                             "#008000", "#00FF00", "#008080", "#00FFFF",
+                                             "#000080", "#0000FF", "#800080", "#FF00FF"))
 ```
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
+The cell graph data are read and converted as mesh 3D using the read_mgxCellGraph function. They contain data relative to the area of the cells and local curvature of the tissue.
+```{r readCellGraph, eval=TRUE}
+myCellGraph <- read_mgxCellGraph(fileCellGraph = fileCellGraph, header_max = 30)
 ```
 
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub!
+### Visualise using {cellviz3d}
+The mesh and cell graph data can be visualised using the package [{cellviz3d}](https://github.com/marionlouveaux/cellviz3d):
+```{r map3D, eval=FALSE}
+library(cellviz3d)
+meshCellcenter <- myCellGraph$vertices[,c("label","x", "y", "z")]
+
+p1 <- plotlyMesh(meshExample = myMesh,
+                 meshColors = myMesh$allColors$Col_label,
+                 meshCellcenter = meshCellcenter) %>%
+  plotly::layout(scene = list(aspectmode = "data"))
+
+p1
+```
+
+```{r echo=FALSE}
+knitr::include_graphics("https://github.com/marionlouveaux/mgx2r/blob/master/inst/img/full/p1labels.png")
+```
+
