--- a/vignettes/vignette_basics.Rmd
+++ b/vignettes/vignette_basics.Rmd
@@ -25,7 +25,7 @@ N.B: this package also include a function to write an R 3D object as a .ply mesh
 
 This vignette requires the mgx2r package, as well as some other additionnal packages. Plotly is a package for displaying 3D interactive graphs, the other packages are needed for colors (colorRamps and RColorBrewer), and for coding (magrittr, dplyr and glue).
 
-```{r lib, warning = FALSE, message = FALSE, eval=FALSE}
+```{r lib, warning = FALSE, message = FALSE, eval=TRUE}
 library(colorRamps)
 library(mgx2r)
 library(magrittr)
@@ -33,45 +33,53 @@ library(dplyr)
 library(plotly)
 library(glue)
 library(RColorBrewer)
+```
 
+```{r libdev, warning = FALSE, message = FALSE, eval=FALSE}
+# devtools::install_github("marionlouveaux/cellviz3d")
 library(cellviz3d)
 ```
 
 ## Loading data
 
-Some .ply demonstration data coming from my PhD thesis are attached to this package and used here in the vignette. This dataset is a timelapse recording of the development of a WT shoot apical meristem expressing a membrane marker. I took one 3D stack every 12h and have 5 timepoints in total.         
+Some .ply demonstration data coming from my PhD thesis are attached to this package and used here in the vignette. This dataset is a timelapse recording of the development of a shoot apical meristem of the plant \emph{Arabidopsis thaliana} expressing a membrane marker. I took one 3D stack every 12h and have 5 timepoints in total. For more information regarding the generation of this dataset, see `help("mgx2r")`.     
 
 Here, in this first vignette, we I will select the first timepoint only. I have one .ply for the mesh and one .ply for the cellGraph.        
-```{r myData, eval=FALSE}
-# Choose one of the two datasets. Generating plots with the full dataset might be slow.
-
+```{r myData, eval=TRUE}
 ### Full datataset
-filePly <- system.file("extdata", "full/normalMesh/2013-02-12_LTi6B_dis_A_T0_cells_minW1_normalMesh.ply", package = "mgx2r")
+filePly <- system.file("extdata", "full/mesh/mesh_meristem_full_T0.ply", package = "mgx2r")
 
-fileCellGraph <- system.file("extdata",  "full/cellGraph/2013-02-12_LTi6B_dis_A_T0_cells_minW1_cellGraph.ply", package = "mgx2r")
-
-
-### Cropped dataset
-filePly <- system.file("extdata", "cropped/normalMesh/2013-02-12_LTi6B_dis_A_T12h_cells_minW1_cropped_normalMesh.ply", package = "mgx2r")
-
-fileCellGraph <- system.file("extdata",  "cropped/cellGraph/2013-02-12_LTi6B_dis_A_T12h_cells_minW1_cropped_cellGraph.ply", package = "mgx2r")
+fileCellGraph <- system.file("extdata",  "full/cellGraph/cellGraph_meristem_full_T0.ply", package = "mgx2r")
 
 ```
 
+As generating following plots with the full dataset might be slow, you can try with the cropped dataset.
+
+```{r, eval=FALSE}
+### Cropped dataset
+filePly <- system.file("extdata", "cropped/mesh/mesh_meristem_cropped_T0.ply", package = "mgx2r")
+
+fileCellGraph <- system.file("extdata",  "cropped/cellGraph/cellGraph_meristem_cropped_T0.ply", package = "mgx2r")
+
+```
 
 ## Mesh and cell graph (e.g. cells and edges properties)
 
 I load the .ply mesh with the modified_read.ply() function. This function is a modified version of read.ply function from geomorph R package to specifically read MGX ply files. I takes in account the fact that each triangular face of the mesh can get several colors (one for the label, one for the fluorescent signal projected on the mesh -membrane or microtubules-...).
-```{r readPly, warning = FALSE, message = FALSE, eval=FALSE}
-myMesh <- read_mgxPly(file = filePly, ShowSpecimen = FALSE, addNormals = TRUE,
-                               MatCol= 1, header_max = 30,
-                               my_colors = c("#800000", "#FF0000", "#808000", "#FFFF00",
-                                             "#008000", "#00FF00", "#008080", "#00FFFF",
-                                             "#000080", "#0000FF", "#800080", "#FF00FF"))
+```{r readPly, warning = FALSE, message = FALSE, eval=TRUE}
+mgx_palette <- c("#800000", "#FF0000", "#808000", "#FFFF00",
+                "#008000", "#00FF00", "#008080", "#00FFFF",
+                "#000080", "#0000FF", "#800080", "#FF00FF")
+
+myMesh <- read_mgxPly(
+  file = filePly, ShowSpecimen = FALSE, addNormals = TRUE,
+  MatCol= 1, header_max = 30,
+  my_colors = mgx_palette)
+str(myMesh, max.level = 1)
 ```
 
 ```{r, eval=FALSE, echo=FALSE}
-saveRDS(myMesh, file = "2013-02-12_LTi6B_dis_A_T0_cells_minW1_normalMesh_full.rds")
+saveRDS(myMesh, file = "mesh_meristem_full_T0.rds")
 ```
 
 Over the rest of the vignette I will only show examples of visualisation with Plotly, but there is another 3D library in R called RGL.
@@ -86,12 +94,13 @@ rgl::shade3d(myMesh)
 ```
 
 Information relative to cells and cell walls (resp. vertices and edges of the cell graph) are stored in a second .ply that I read with the modified_read.cellGraph() function that I wrote myself. The modified_read.cellGraph() function reads the cell graph .ply and extract two dataframes (one for the vertices informations and one for the edges informations). These two dataframes are then combined into a list.
-```{r readCellGraph, eval=FALSE}
-myCellGraph <- read_mgxCellGraph(fileCellGraph = fileCellGraph_big, header_max = 30)
+```{r readCellGraph, eval=TRUE}
+myCellGraph <- read_mgxCellGraph(fileCellGraph = fileCellGraph, header_max = 30)
+myCellGraph
 ```
 
 ```{r, eval=FALSE, echo=FALSE}
-saveRDS(myCellGraph, file = "2013-02-12_LTi6B_dis_A_T0_cells_minW1_cellGraph_full.rds")
+saveRDS(myCellGraph, file = "cellGraph_meristem_full_T0.rds")
 ```
 
 
